--- a/css/content.css
+++ b/css/content.css
@@ -10,11 +10,35 @@
 .slider-content .slider-images {
   display: flex;
   width: 100%;
-  height: 800px;
+  height: 500px;
 }
 
 .slider-images img {
   width: 100%;
+}
+
+.slider-content .slider-dots {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+}
+
+.slider-dots .dots-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  top: 92%;
+  margin: auto;
+}
+
+.slider-content .slider-dot {
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background-color: none;
+  border: 2px solid white;
+  z-index: 100;
+  margin: 0px 10px;
 }
 
 .prevBtn {
