--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,5 @@ body {
   flex-direction: column;
   align-items: center;
   background: linear-gradient(to right, #c9d6ff, #e2e2e2);
+  height: 100%;
 }
