--- a/css/content.css
+++ b/css/content.css
@@ -10,7 +10,7 @@
 .slider-content .slider-images {
   display: flex;
   width: 100%;
-  height: 500px;
+  height: 800px;
 }
 
 .slider-images img {
@@ -20,7 +20,7 @@
 .slider-content .slider-dots {
   position: absolute;
   width: 100%;
-  height: 500px;
+  height: 800px;
 }
 
 .slider-dots .dots-container {
@@ -36,7 +36,7 @@
   width: 15px;
   height: 15px;
   background-color: none;
-  border: 2px solid white;
+  border: 2px solid grey;
   z-index: 100;
   margin: 0px 10px;
 }
