--- a/css/content.css
+++ b/css/content.css
@@ -5,12 +5,13 @@
   position: relative;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+  margin-bottom: 20px;
 }
 
 .slider-content .slider-images {
   display: flex;
   width: 100%;
-  height: 800px;
+  height: auto;
 }
 
 .slider-images img {
@@ -20,7 +21,7 @@
 .slider-content .slider-dots {
   position: absolute;
   width: 100%;
-  height: 800px;
+  height: 100%;
 }
 
 .slider-dots .dots-container {
